styles/player.css
/* These variables are set by the extension */
/* :root {
  --player-height: 80px;
  --player-padding-x: 8px;
  --player-border-radius: 8px;
  --player-image-radius: 8px;
  --player-bg-opacity: 50%;
  --player-bg-color: rgba(var(--clr-surface-1-rgb), 0.7);
  --player-blur: 32px;
  --player-saturate: 150%;
  --player-brightness: 80%;
  --player-opacity: 100%;
  --player-contrast: 100%;
} */
.Root__now-playing-bar {
  background-color: transparent;
  margin: 0;
  padding: 0;
  width: 100%;
}
.Root__now-playing-bar .progress-bar {
  --progress-bar-height: var(--slider-height, 4px) !important;
}

.main-nowPlayingBar-container {
  display: flex;
  position: relative;
  flex-direction: row;
  justify-content: center;
  left: 50%;
  height: var(--player-height, 80px);
  transform: translate3d(-50%, 0, 0);
  padding: 0 var(--panel-gap);
}

.next-playing-card,
.main-nowPlayingBar-nowPlayingBar {
  flex: 1;
  position: relative;
  background: var(--player-bg-color, var(--main-bg));
  border: var(--default-border);
  border-radius: var(--player-border-radius, var(--m-br));
}
.next-playing-on-right {
  .next-playing-card {
    margin-left: 4px;
  }
}
.next-playing-on-left {
  .next-playing-card {
    order: 0;
  }
  .main-nowPlayingBar-nowPlayingBar {
    order: 1;
  }
}
.player-controls__buttons {
  margin-bottom: 4px;
}

.main-nowPlayingBar-nowPlayingBar {
  height: var(--player-height, 80px);
  width: var(--player-width, 100%);
  max-width: var(--player-width, 100%);
  padding: 0 var(--player-padding-x);
}

.floating.Root__now-playing-bar {
  position: fixed;
  bottom: var(--panel-gap, 8px);
  left: 0;
  animation: none;
  transition: none;

  .main-nowPlayingBar-nowPlayingBar {
    width: calc(100% - 2 * var(--panel-gap, 8px));
    position: relative;
    animation: none;
    transition: none;

    &:before {
      content: "";
      height: 100%;
      width: 100%;
      position: absolute;
      inset: 0;
      border-radius: inherit;
      z-index: -1;
      -webkit-backdrop-filter: blur(var(--player-blur, 1rem)) saturate(var(--player-saturate, 1.5))
        brightness(var(--player-brightness, 60%)) contrast(var(--player-contrast))
        opacity(var(--player-opacity, 1));
      backdrop-filter: blur(var(--player-blur, 1rem)) saturate(var(--player-saturate, 1.5))
        brightness(var(--player-brightness, 60%)) contrast(var(--player-contrast))
        opacity(var(--player-opacity, 1));
    }
  }
}

.Root__now-playing-bar {
  .main-nowPlayingWidget-coverArt,
  .cover-art,
  .HD9s7U5E1RLSWKpXmrqx,
  .main-coverSlotCollapsed-container,
  .main-coverSlotCollapsed-container div,
  .cover-art-image {
    width: var(--cover-art-size, 56px);
    height: var(--cover-art-size, 56px);
    border-radius: var(--player-image-radius, 8px);
  }
}
.player-compact .Root__now-playing-bar {
  --cover-art-size: calc(var(--player-height) - 16px);
  .cover-art {
    position: relative;
  }

  .cover-art-icon {
    inset: 0;
  }

  .main-nowPlayingWidget-trackInfo.main-trackInfo-container {
    width: 100%;
  }

  .main-nowPlayingBar-center {
    width: 75cqw;
    max-width: 100%;
  }

  .main-nowPlayingBar-center .player-controls {
    flex-direction: row;
  }

  .player-controls__buttons {
    width: fit-content;
    margin-bottom: 0;
  }

  /* Make play and pause button of same size */
  .player-controls__buttons button {
    --encore-control-size-smaller: 24px !important;
  }

  .main-nowPlayingBar-left {
    -webkit-padding-start: 4px;
    padding-inline-start: 4px;
    padding-right: 8px;
    width: 25%;
    min-width: 20%;
  }

  .main-nowPlayingBar-nowPlayingBar {
    height: var(--player-height, 4rem) !important;
  }

  .main-nowPlayingBar-right {
    max-width: fit-content;
  }
  .progress-bar {
    min-width: 4cqw;
  }
}

.Root__now-playing-bar.hide-icons {
  div.main-nowPlayingBar-left {
    min-width: 25%;
  }

  div.main-nowPlayingBar-right {
    min-height: 2rem;
    min-width: 9rem;
    width: 12rem;
    position: relative;
  }

  .main-nowPlayingBar-extraControls {
    position: absolute;
    top: 50%;
    right: 0rem;
    width: 9rem;
    overflow: hidden;
    gap: 4px;
    padding: 0.5rem 0.5rem;
    border-radius: 0.75rem;
    transition:
      width 225ms ease-in-out,
      background-color 300ms linear;
    border: var(--border-thickness, 1px) var(--border-style, solid) rgba(0, 0, 0, 0);
    transform: translate3d(0px, -50%, 0px);

    &:hover {
      width: fit-content;
      min-width: fit-content;
      max-width: 50cqw;
      background-color: var(--clr-surface);
      border: var(--hover-border);
    }

    .volume-bar {
      min-width: 6rem;
      order: 1;
    }

    button[data-testid="fullscreen-mode-button"] {
      order: 2;
    }
  }
}

div.cover-art {
  background-color: rgba(var(--clr-on-surface-rgb), 0.1);
}
div.cover-art-icon {
  inset: 0 !important;
  position: absolute;
  color: var(--text-base);
  transform-origin: center center;
  transform: scale(0.5);
}

.main-connectBar-connectBar {
  --height: 32px;
  --x-offset: calc((var(--height) + var(--panel-gap)) * -1);
  --y-offset: var(--panel-gap);
  height: var(--height);
  position: fixed !important;
  top: var(--x-offset);
  right: var(--y-offset);
  padding-inline: 8px;
  border: var(--default-border);
}

.next-playing-on-right .main-connectBar-connectBar {
  right: unset;
  left: var(--y-offset);
}

.next-playing-card {
  height: var(--height, 64px);
  padding: var(--x-padding, 8px) var(--y-padding, 8px);
  gap: var(--gap, 4px);
  display: flex;
  justify-content: start;
  align-items: center;
  transition: var(--default-transition);
  overflow: hidden;

  &.floating {
    --x-offset: calc((var(--height) + (var(--panel-gap) / 2)) * -1);
    --y-offset: var(--panel-gap);
    position: fixed !important;
    top: var(--x-offset);
    left: var(--y-offset);

    &.right {
      left: auto;
      right: var(--y-offset);
    }
  }

  &.left {
    order: 0;
  }

  &:before {
    content: "";
    height: 100%;
    width: 100%;
    position: absolute;
    inset: 0;
    border-radius: inherit;
    z-index: -1;
    -webkit-backdrop-filter: blur(var(--player-blur, 1rem)) saturate(var(--player-saturate, 1.5))
      brightness(var(--player-brightness, 60%)) contrast(var(--player-contrast))
      opacity(var(--player-opacity, 1));
    backdrop-filter: blur(var(--player-blur, 1rem)) saturate(var(--player-saturate, 1.5))
      brightness(var(--player-brightness, 60%)) contrast(var(--player-contrast))
      opacity(var(--player-opacity, 1));
  }

  .main-trackInfo-artists {
    display: block;
  }
  .main-coverSlotCollapsed-container {
    margin: 0;
  }
  .main-coverSlotCollapsed-container button {
    background: transparent;
  }
  .main-nowPlayingWidget-coverArt,
  .cover-art,
  .HD9s7U5E1RLSWKpXmrqx,
  .main-coverSlotCollapsed-container,
  .main-coverSlotCollapsed-container div,
  .cover-art-image {
    transition: var(--default-transition);
    --cover-art-size: var(
      --cover-size,
      calc(var(--height) - (var(--y-padding, 8px) + var(--x-padding, 8px)))
    );
  }
  .placeholder-title,
  .placeholder-artist {
    width: 10rem;
    height: 18px;
    background: linear-gradient(
      90deg,
      rgba(var(--clr-on-surface-rgb), 0.1) 0%,
      rgba(var(--clr-on-surface-rgb), 0.3) 50%,
      rgba(var(--clr-on-surface-rgb), 0.1) 100%
    );
    background-size: 200% 100%;
    background-position: 200% 0;
    border-radius: 99px;
    animation: shimmer 1.5s infinite linear;
  }

  .placeholder-artist {
    animation-delay: 1s;
    height: 16px;
    width: 7rem;
  }

  .main-nowPlayingWidget-trackInfo {
    gap: 2px;
  }
}

.main-entityHeader-container.DFuKwT5bvhKZoYr2gfZe,
.main-entityHeader-container.main-entityHeader-withBackgroundImage {
  height: var(--main-view-height);
  background-image: linear-gradient(to bottom, transparent 75%, rgba(var(--clr-surface-rgb), 0.25));
}
.player-floating {
  .main-entityHeader-container.DFuKwT5bvhKZoYr2gfZe,
  .main-entityHeader-container.main-entityHeader-withBackgroundImage {
    height: calc(var(--main-view-height, 800px) - (var(--player-height, 5rem)));
  }
}
.global-nav-floating {
  .main-entityHeader-container.DFuKwT5bvhKZoYr2gfZe,
  .main-entityHeader-container.main-entityHeader-withBackgroundImage {
    height: calc(var(--main-view-height) + var(--global-nav-height) - var(--panel-gap));
  }
}

.global-nav-floating.global-nav-not-auto-hide,
.global-nav-floating.global-nav-auto-hide {
  .main-entityHeader-container.DFuKwT5bvhKZoYr2gfZe,
  .main-entityHeader-container.main-entityHeader-withBackgroundImage {
    height: var(--main-view-height);
  }
}

.player-floating.global-nav-floating {
  .main-entityHeader-container.DFuKwT5bvhKZoYr2gfZe,
  .main-entityHeader-container.main-entityHeader-withBackgroundImage {
    height: calc(var(--main-view-height) - var(--player-height));
  }
}

.player-floating.player-auto-hide {
  .main-entityHeader-container.DFuKwT5bvhKZoYr2gfZe,
  .main-entityHeader-container.main-entityHeader-withBackgroundImage {
    height: var(--main-view-height);
  }
}

.player-floating {
  .Root__main-view {
    grid-row-end: now-playing-bar !important;
  }

  .os-scrollbar-track,
  .nw2W4ZMdICuBo08Tzxg9,
  .lyrics-config-button-container,
  .lyrics-lyricsContainer-SyncedLyricsPage,
  div[data-testid="NPV_Panel_OpenDiv"],
  .main-yourLibraryX-libraryRootlist {
    padding-bottom: var(--player-height, 5rem) !important;
  }
  .marketplace-add-snippet-btn {
    bottom: var(--player-height, 5rem) !important;
  }

  .main-view-container__scroll-node-child {
    padding-bottom: calc(var(--player-height, 5rem) - var(--panel-gap)) !important;
  }
}

.player-auto-hide {
  z-index: var(--above-main-z-index, 5);

  .Root__right-sidebar,
  #Desktop_LeftSidebar_Id {
    grid-row-end: now-playing-bar !important;
  }

  .QdB2YtfEq0ks5O4QbtwX /* now playing card in root */ {
    grid-row-end: now-playing-bar !important;
  }

  .QdB2YtfEq0ks5O4QbtwX.FWlHsHhD0hSw1ldIXnOF,
  .QdB2YtfEq0ks5O4QbtwX.poe3QmyrczMfT4aZNIok {
    margin-bottom: calc(var(--panel-gap) * -1) !important;
  }

  #player-hover-target {
    z-index: var(--hover-target-z-index, 4);
    position: fixed;
    left: 0;
    bottom: 0;
    height: var(--player-target-size, 32px);
    width: 100%;
    background: none;
  }

  .floating.Root__now-playing-bar {
    position: fixed;
    bottom: -100%;
    left: var(--panel-gap);
    transition: bottom 0.3s ease-in-out;
  }

  .floating.Root__now-playing-bar.show {
    bottom: var(--panel-gap);
  }
}

